--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body{
     height: 100vh;
     width: 100%;
+    background-color: #e2e2e2;
 }
 .watch-container{
     width: 100%;
@@ -20,9 +21,10 @@ body{
     letter-spacing: 1px;
     font-size: 72px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    background-color: #f2f2f2;
 }
 .watch-container p span{
-    box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+    background-color: #f2f2f2;
 }
 .clock-button{
     cursor: pointer;
@@ -69,4 +71,7 @@ body{
 .project-heading h1{
     text-transform: capitalize;
     font-size: 50px;
+}
+small{
+    color: #b8b8b8;
 }
